[package]
name = "neuron"
version = "0.1.0"
edition = "2021"

[features]
default = [ "gpu_accel" ]
gpu_accel = [ "dep:bytemuck", "dep:naga", "dep:vulkano" ]

[dependencies]
counter = "0.5.7"
csv = "1.3.0"
float-derive = "0.1.0"
float-derive-macros = "0.1.0"
micromath = "2.1.0"
ndarray = {version = "0.15.6", features = ["std", "serde", "rayon"]}
num-order = "1.2.0"
num-traits = "0.2.18"
ordered-float = "4.2.0"
prettytable = "0.10.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
thiserror = "1.0.58"

# gpu_accel deps
bytemuck = { version = "1.15", optional = true }
naga = { version = "0.19", optional = true }
vulkano = { version = "0.34", optional = true }

[dev-dependencies]
criterion = "0.3"
