[package]
name = "neuron"
version = "0.1.0"
edition = "2021"

[features]
default = [ "gpu_accel" ]
gpu_accel = [ "dep:bytemuck", "dep:pollster", "dep:wgpu" ]

[dependencies]
counter = "0.5.7"
csv = "1.3.0"
either = "1.12.0"
float-derive = "0.1.0"
float-derive-macros = "0.1.0"
log = "0.4.21"
micromath = "2.1.0"
ndarray = {version = "0.15.6", features = ["std", "serde", "rayon"]}
ndarray-linalg = { version = "0.16.0", features = ["intel-mkl-static"]}
num-order = "1.2.0"
num-traits = "0.2.18"
ordered-float = "4.2.0"
prettytable = "0.10.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
thiserror = "1.0.58"
# TODO: Make this as togglable as possible; `macros` and `rt` features is only needed for testing.
tokio = { version = "1.37.0", features = ["sync", "macros", "rt"] }

# gpu_accel deps
bytemuck = { version = "1.15", optional = true }
pollster = { version = "0.3.0", optional = true, features = ["macro"] }
wgpu = { version = "0.20.1", optional = true }

[dev-dependencies]
criterion = "0.3"
# TODO: This is only for tests so remove from non-test debug builds.
env_logger = "0.11.5"
log = "0.4.22"
